--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-Discord V14 Music Bot
-📑 Bot Performance
-[x] 7/24 Uptime
+Discord Register Bot
+
+[x] Advanced Registration
 [x] Button System
 [x] Slash Commands
 
 📷 Image
-https://cdn.discordapp.com/attachments/1072965064434397244/1073166935468015646/Uptime.png
 
-🚨 Support Server
-✈ discord.gg/RcJPqKUMwu
+
+Support Server
+discord.gg/RcJPqKUMwu
